--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,17 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zavtech</groupId>
+            <artifactId>morpheus-core</artifactId>
+            <version>LATEST</version>
+        </dependency>
     </dependencies>
 
     <properties>
