--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,11 @@
+<!--
+  ~ /* Copyright (C) Avinash Ramana - All Rights Reserved
+  ~  * Unauthorized copying of this file, via any medium is strictly prohibited
+  ~  * Proprietary and confidential
+  ~  * Written by Avinash Ramana <bitorius@gent00.com>, 2020
+  ~  */
+  -->
+
 <project xmlns = "http://maven.apache.org/POM/4.0.0"
          xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0
