--- a/src/main/resources/commons-logging.properties
+++ b/src/main/resources/commons-logging.properties
@@ -1,1 +1,9 @@
+#
+# /* Copyright (C) Avinash Ramana - All Rights Reserved
+#  * Unauthorized copying of this file, via any medium is strictly prohibited
+#  * Proprietary and confidential
+#  * Written by Avinash Ramana <bitorius@gent00.com>, 2020
+#  */
+#
+
 org.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog
